GUI-741 fixed scrollbar on midway dag

--- a/stylesheets/less/partials/dag.less
+++ b/stylesheets/less/partials/dag.less
@@ -48,6 +48,10 @@
         #dagPulloutTab {
             .transform (rotate(180deg));
         }
+
+        .dagArea {
+            height: ~"calc(50% - 10px)";
+        }
     }
 
     &.full {
